# gemini-paper-summarizer

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  summarize.py
examples/: .gitignore  1706.03762v7-de.md  1706.03762v7-en.md  1706.03762v7-es.md  1706.03762v7-fr.md  1706.03762v7-ja.md  1706.03762v7-ko.md  1706.03762v7-zh.md  Makefile
src/: gemini.py  section.py  summarize.py
src/gp_summarize/: __init__.py  __main__.py  gemini.py  summarize.py
src/gp_summarize/lang/: de.py  en.py  es.py  fr.py  ja.py  ko.py  selector.py  zh.py
test/: test_sections.py
tests/: test_sections.py
