[project]
name = "gemini-paper-summarizer"
version = "0.3.0"
description = "Gemini Paper Summarizer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-generativeai>=0.8.3",
    "hatchling>=1.27.0",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gp_summarize"]

[project.scripts]
gp-summarize = "gp_summarize.summarize:main"
